--- a/SCME.ProfileBuilder/MainWindow.xaml
+++ b/SCME.ProfileBuilder/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:res="clr-namespace:SCME.ProfileBuilder.Properties"
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924" Width="1500" Height="924"
-        Title="SCME.ProfileBuilder"
+        Title="SCME.ProfileBuilder" Closing="Window_Closing"
         ResizeMode="CanResize"
         WindowStartupLocation="CenterScreen"
         Background="{StaticResource xGray2}" WindowState="Maximized" Icon="App.ico"
