ЗУ в режиме сборки не сжимается не расжимается, параметр в UI WindowIs1280x1024 отвечает за запуск нормального окна окна с соответствующим разрешением

--- a/SCME.UI/CustomControl/ListViewResults.xaml
+++ b/SCME.UI/CustomControl/ListViewResults.xaml
@@ -180,7 +180,7 @@
                     </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -244,7 +244,7 @@
                 </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -282,7 +282,7 @@
                 </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -343,7 +343,7 @@
                     </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -381,7 +381,7 @@
                     </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -403,7 +403,7 @@
                     <Label Content="{x:Static res:Resources.AtuPRSM}" Grid.Column="0" Grid.Row="3"/>
                     <Label Name="lbAtuPRSM" Grid.Column="1" Grid.Row="3" Content="0" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}"/>
 
-                    <Label Name="lbAtuWarning"  Background="Gold" Grid.Column="0" Grid.Row="4" Content="Warning" Style="{StaticResource WarningFaultLabelStyle}"/>
+                    <Label Name="lbAtuWarning" Margin="20,0,0,0"  Background="Gold" Grid.Column="0" Grid.Row="4" Content="Warning" Style="{StaticResource WarningFaultLabelStyle}"/>
                     <Label Name="lbAtuFaultReason"  Background="Tomato" Grid.Column="1" Grid.Row="4" Content="Fault" Style="{StaticResource WarningFaultLabelStyle}"/>
                 </Grid>
             </DataTemplate>
@@ -418,7 +418,7 @@
                     </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -479,7 +479,7 @@
                     </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
@@ -512,7 +512,7 @@
                     </Grid.Visibility>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
