--- a/SCME.UI/PagesUser/UserWorkModePage.xaml
+++ b/SCME.UI/PagesUser/UserWorkModePage.xaml
@@ -5,6 +5,7 @@
         xmlns:res="clr-namespace:SCME.UI.Properties"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SCME.UI"
+        xmlns:types="clr-namespace:SCME.Types;assembly=SCME.Types"
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
         x:Name="userWorkModePage" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
         Title="{x:Static res:Resources.LoginPage_Title}" >
@@ -72,27 +73,27 @@
             <RowDefinition Height="94" />
         </Grid.RowDefinitions>
 
-        <Button x:Name="OperatorButton" CommandParameter="{x:Static local:UserWorkMode.Operator}" Grid.Column="2" Grid.Row="1" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
+        <Button x:Name="OperatorButton" CommandParameter="{x:Static types:UserWorkMode.Operator}" Grid.Column="2" Grid.Row="1" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xGreen1}">
                 <Path Data="{StaticResource LoginPath}" />
                 <Label Content="{x:Static res:Resources.OperatorMode}" />
             </Grid>
         </Button>
 
-        <Button x:Name="ServiceManButton" CommandParameter="{x:Static local:UserWorkMode.ServiceMan}" Grid.Column="2" Grid.Row="3" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
+        <Button x:Name="ServiceManButton" CommandParameter="{x:Static types:UserWorkMode.ServiceMan}" Grid.Column="2" Grid.Row="3" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xBlue3}">
                 <Path Data="{StaticResource TechPath}" />
                 <Label Content="{x:Static res:Resources.ServicemanMode}" />
             </Grid>
         </Button>
 
-        <Button x:Name="OperatorBuildModeButton" CommandParameter="{x:Static local:UserWorkMode.OperatorBuildMode}" Grid.Column="2" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
+        <Button x:Name="OperatorBuildModeButton" CommandParameter="{x:Static types:UserWorkMode.OperatorBuildMode}" Grid.Column="2" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xGreen1}">
                 <Label Content="{x:Static res:Resources.OperatorBuildMode}" />
             </Grid>
         </Button>
 
-        <Button x:Name="SpecialMeasureButton" Visibility="{Binding SpecialMeasureVisibility}" CommandParameter="{x:Static local:UserWorkMode.SpecialMeasure}" Grid.Column="0" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
+        <Button x:Name="SpecialMeasureButton" Visibility="{Binding SpecialMeasureVisibility}" CommandParameter="{x:Static types:UserWorkMode.SpecialMeasure}" Grid.Column="0" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xRed2}">
                 <Path Data="{StaticResource SpecialMeasurePath}" />
                 <Label Content="{x:Static res:Resources.SpecialMeasureMode}" />
