--- a/SCME.UI/PagesUser/UserWorkModePage.xaml
+++ b/SCME.UI/PagesUser/UserWorkModePage.xaml
@@ -5,6 +5,7 @@
         xmlns:res="clr-namespace:SCME.UI.Properties"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SCME.UI"
+        xmlns:ui="clr-namespace:SCME.UI"
         xmlns:types="clr-namespace:SCME.Types;assembly=SCME.Types"
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="944"
         x:Name="userWorkModePage" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
@@ -52,6 +53,7 @@
             </Setter>
         </Style>
 
+        <ui:TryBooleanToVisibilityConverter x:Key="B2V" />
     </Page.Resources>
 
     <Grid>
@@ -87,7 +89,7 @@
             </Grid>
         </Button>
 
-        <Button x:Name="OperatorBuildModeButton" CommandParameter="{x:Static types:UserWorkMode.OperatorBuildMode}" Grid.Column="2" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
+        <Button x:Name="OperatorBuildModeButton" Visibility="{Binding Source={x:Static res:Settings.Default}, Path = OperatorBuildModeIsEnabled, Converter={StaticResource B2V}}" CommandParameter="{x:Static types:UserWorkMode.OperatorBuildMode}" Grid.Column="2" Grid.Row="5" Height="160" IsEnabled="{Binding ButtonsModeIsEnabled}" Click="SelectMode_Click">
             <Grid Background="{StaticResource xGreen1}">
                 <Label Content="{x:Static res:Resources.OperatorBuildMode}" />
             </Grid>
